[package]
name = "r-display"
version = "0.3.3"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.18.0"
exr = "0.9.0"
ndspy-sys = "0.1.7"
num = "0.4.0"
oidn = "1.3.1"
rayon = "1.5.0"

[dev-dependencies]
nsi = "0.7.1"
polyhedron-ops = { version = "0.2.3", features = ["nsi"] }

[profile.release]
rpath = false
lto = "on"
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
rpath = false
